[tool.poetry]
name = "python-100-days"
version = "0.1.0"
description = ""
authors = ["OpenPowers <openpowers@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5.21"
mkdocs-git-revision-date-localized-plugin = "^1.2.5"


[tool.poetry.group.dev.dependencies]
natsort = "^8.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
